# efi_signer

./: .gitignore  Cargo.toml  README.md  certificate.der  certificate.p7b  certificate.pem  csr.csr  efi_signer.txt  key.pem  p7b.txt  p7b1.txt  sb.txt  shimx64.efi  shimx64.efi.signed  shimx64.efi.signed.efi_signer  shimx64.efi.signed.pesign
.github/workflows/: rust.yml
examples/: main.rs
pedb/: cert9.db  key4.db  pkcs11.txt
scripts/: make_codesign_cert.sh
src/: error.rs  lib.rs
test/: ca.csr  ca.key  rootca.pem  rootca.srl  signer.csr  signer.key  signer.p12  signer.p7b  signer.pem
tests/: certificate.p7b  certificate.pem  key.pem  shimx64.efi.dualsigned  test.p7b  test_p7b.rs  test_parse.rs  test_sign.rs  wrong_cert.pem
