[package]
name = "efi_signer"
version = "0.2.8"
edition = "2021"
authors = ["Li Chaoran <pkwarcraft@gmail.com>"]
description = "A crates for signing and parsing EFI image"
license = "MulanPSL-2.0"
repository = "https://github.com/pkking/efi_signer/"
keywords = ["efi", "authenticode", "PE", "secureBoot", "UEFI"]
readme = "README.md"

[dependencies]
byteorder = "1.4.3"
cms = { version = "0.2.2", features = ["pem"] }
der = "0.7.8"
digest = "0.10.7"
goblin = "0.6.1"
log = "0.4.17"
md-5 = "0.10.6"
openssl = "0.10.52"
openssl-sys = { version = "0.9.87", features = ["vendored"] }
picky = { version = "7.0.0-rc.8", features = ["pkcs7", "wincert", "time_conversion", "ctl", "ctl_http_fetch"] }
picky-asn1-x509 = "0.14.1"
serde = "1.0.159"
sha1 = "0.10.6"
sha2 = "0.10.8"
snafu = "0.8.5"
x509-cert = "0.2.4"


[dev-dependencies]
clap = { version = "4.2.4", features = ["derive"] }
env_logger = "0.11.5"
